--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                                      <img src="xx.jpg">
                              <ul>
                                      <li class="active"><a href="#">Home</a></li>
-                                     <li><a href="#">Services</a></li>
-                                     <li><a href="#">Gallery</a></li>
-                                     <li><a href="#">About</a></li>
+                                     <li><a href="https://www.google.com/">Google</a></li>
+                                     <li><a href="https://www.youtube.com/">Youtube</a></li>
+                                     <li><a href="https://www.instagram.com/">Instagram</a></li>
                                      <li><a href="#">Contact</a></li>
                             </ul>
                     </div>
@@ -24,8 +24,7 @@
                     </div>
 
                     <div class="button">
-                            <a href="https://www.youtube.com/watch?v=uyaV_EWWRmo" target="_blank" class="btn">WATCH VIDEO</a>
-                            <a href="#" class="btn">LEARN MORE</a>
+                            <a href="https://www.youtube.com/watch?v=uyaV_EWWRmo" target="_blank" class="btn">WATCH VIDEO ON HOW I MADE THIS.</a>
 
                     </div>
            </header>
